type ahead works

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.holgerbrandl</groupId>
+            <artifactId>themoviedbapi</artifactId>
+            <version>1.12</version>
+        </dependency>
     </dependencies>
 
 </project>
